--- a/platform/index.html
+++ b/platform/index.html
@@ -42,7 +42,7 @@
   <div class="subnavbar-inner">
     <div class="container">
       <ul class="mainnav">
-          <li class="active"><a href="#dashboard" id="dashboard" class="url-change"><i class="icon-dashboard"></i><span>Dashboard</span> </a></li>
+          <li><a href="#dashboard" id="dashboard" class="url-change"><i class="icon-dashboard"></i><span>Dashboard</span> </a></li>
           <li><a href="#alloffers" id="alloffers" class="url-change"><i class="icon-list-alt"></i><span>Offers</span> </a> </li>
         <li><a href="#myoffers" id="myoffers" class="url-change"><i class="icon-list"></i><span>My Offers</span> </a></li>
         <li><a href="#account" id="account" class="url-change"><i class="icon-user"></i><span>Account details</span> </a> </li>
