--- a/platform/dashboard.html
+++ b/platform/dashboard.html
@@ -48,3 +48,10 @@
 	   </div>   
     </div>
 </div>
+<script>
+    $(document).ready(function(){
+        $(".mainnav li").removeClass("active");
+        var page = window.location.hash;
+        $(".mainnav a[href='"+page+"']").parent().addClass("active");
+    });
+</script>
