--- a/platform/myoffers.html
+++ b/platform/myoffers.html
@@ -1,3 +1,4 @@
+<img src="img/texture.png" id="background-image">
 <div class="row">
     <div class="start">
         <h1>My Offers
@@ -11,6 +12,9 @@
     </div>
 </div>
 <script>
+    if(window.location.href.indexOf("index.html#") == -1) {
+       window.location.replace('/platform/index.html');
+    }
     $(document).ready(function(){
         function ajaxGetCall(url, errorCallback, successCallback){
             $.ajax({
@@ -27,6 +31,10 @@
                 success: successCallback
             });
         }
+        
+        $(".mainnav li").removeClass("active");
+        var page = window.location.hash;
+        $(".mainnav a[href='"+page+"']").parent().addClass("active"); 
         
         var currentUser = JSON.parse(localStorage.getItem("currentUser"));
         var oKey = JSON.parse(localStorage.getItem("currentKey"))[0].operationKey;
@@ -52,7 +60,7 @@
             else
                 var expired="";
 
-            $("#myoffersList").append("<div class='span12'><div class='widget'><div class='widget-content'>"+expired+"<p><i class='icon-time'></i>&nbsp;"+$.timeago(date)+"<h3>"+myRecords[i].title+"</h3><div class='job-facts-offer-list row'>"+procentTag+"<div class='tag span2'>"+myRecords[i].jobType+"</div><div class='tag span2'>"+myRecords[i].jobLevel+"</div><div class='tag span3'>"+myRecords[i].jobCategory+"</div></div><h4><b>Company: </b>"+myRecords[i].company+"</h4><h4><b>Location: </b>"+myRecords[i].city+", "+myRecords[i].country+"</h4><a href='#offer-page:"+myRecords[i].id+"' class='btn btn-warning offer-more-details' data-id='"+myRecords[i].id+"'>More details &nbsp; <i class='icon-chevron-right'></i></a></div></div></div>")
+            $("#myoffersList").append("<div class='span12'><div class='widget'><div class='widget-content'>"+expired+"<p class='offer-page-header-list row'><span class='timeago span2'><i class='icon-time'></i>&nbsp;"+$.timeago(date)+"</span><span class='timeago span3'><i class='icon-map-marker'></i>&nbsp;"+myRecords[i].city+", "+myRecords[i].country+"</span><span class='timeago span6'><i class='icon-building'></i>&nbsp;"+myRecords[i].company+"</span></p><h3>"+myRecords[i].title+"</h3><div class='job-facts-offer-list row'>"+procentTag+"<div class='tag span2'>"+myRecords[i].jobType+"</div><div class='tag span2'>"+myRecords[i].jobLevel+"</div><div class='tag span3'>"+myRecords[i].jobCategory+"</div></div><h4><b>Company: </b>"+myRecords[i].company+"</h4><h4><b>Location: </b>"+myRecords[i].city+", "+myRecords[i].country+"</h4><a href='#offer-page:"+myRecords[i].id+"' class='btn btn-warning offer-more-details' data-id='"+myRecords[i].id+"'>More details &nbsp; <i class='icon-chevron-right'></i></a></div></div></div>")
         }
     });
 </script>
