--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>ReferralShip</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+    <meta name="description" content="ReferralShip represents a platform where any individual can post job offers from their current company and job seekers can apply through them. Candidates gain more trust and the chances to have an interview increase significantly, while posters can earn money from their employee referral program.">
   <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
   <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Open+Sans'>
 
