--- a/platform/index.html
+++ b/platform/index.html
@@ -70,6 +70,7 @@
 <div class="main">
     <div class="main-inner">
         <div class="container" id="mainSection">
+            <p class="loading-text hide">Loading...</p>
             <section id="dashboard" src="dashboard.html" default></section>
             <section id="alloffers" src="alloffers.html"></section>
             <section id="myoffers" src="myoffers.html"></section>
