--- a/platform/dashboard.html
+++ b/platform/dashboard.html
@@ -51,7 +51,7 @@
 <script>
     $(document).ready(function(){
         $(".mainnav li").removeClass("active");
-        var page = window.location.hash;
-        $(".mainnav a[href='"+page+"']").parent().addClass("active");
+        $(".mainnav a[href='#dashboard']").parent().addClass("active");
+        $(".loading-text").addClass("hide");
     });
 </script>
