--- a/platform/offer-page-edit.html
+++ b/platform/offer-page-edit.html
@@ -224,7 +224,7 @@
                               allowOutsideClick: true,
                               allowEscapeKey: true
                             });
-                            setTimeout(function() {window.location.replace("/platform/#offer-page:"+parseInt(params));}, 3000);
+                            setTimeout(function() {window.location.replace("/platform/index.html#offer-page:"+parseInt(params));}, 3000);
                         })     
                     })
                 })
