--- a/platform/offer-page.html
+++ b/platform/offer-page.html
@@ -85,7 +85,7 @@
                         if(!myRecord[0].procent)
                             var procentTag = "";
                         else
-                            var procentTag = "<span class='tag orange'>"+myRecord[0].procent+"% Bonus</span>";
+                            var procentTag = "<span class='tag orange'>"+myRecord[0].procent+" Ron</span>";
                         
                         $("#offer").append("<div class='span12'><div class='offer-page-header'><span class='timeago offer-info-header'><i class='icon-time'></i>&nbsp;"+$.timeago(date)+"</span><span class='timeago offer-info-header'><i class='icon-map-marker'></i>&nbsp;"+myRecord[0].city+", "+myRecord[0].country+"</span><span class='timeago offer-info-header'><i class='icon-building'></i>&nbsp;"+myRecord[0].company+"</span></div><h1 style='margin-top:15px; text-align:center'>"+myRecord[0].title+"</h1><div class='job-facts'>"+procentTag+"<span class='tag'>"+myRecord[0].jobType+"</span><span class='tag'>"+myRecord[0].jobLevel+"</span><span class='tag'>"+myRecord[0].jobCategory+"</span></div><p>"+myRecord[0].content+"</p></div>");
                     }
