--- a/platform/index.html
+++ b/platform/index.html
@@ -87,10 +87,22 @@
 <div class="footer">
   <div class="footer-inner">
     <div class="container">
-      <div class="row">
-        <div class="span12"> &copy; 2017 ReferralShip</div>
-        <!-- /span12 --> 
-      </div>
+        <div class="row">
+            <div class="span6">
+                Whether you’re looking for answers, would like to solve a problem, or just want to give us some feedback, contact us at <b>contact@referralship.net</b>
+            </div>
+            <div class="span6" style="
+            text-align: right;
+            "> 
+                © 2017 ReferralShip&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="#" target="_blank">
+                    <i class="icon-facebook-sign"></i>
+                </a>
+                <a href="#" target="_blank">
+                    <i class="icon-linkedin-sign"></i>
+                </a>
+            </div>
+        </div>
       <!-- /row --> 
     </div>
     <!-- /container --> 
