--- a/platform/index.html
+++ b/platform/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Platform | ReferralShip</title>
+<title>ReferralShip</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
@@ -24,7 +24,7 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container"> <a class="btn btn-navbar" data-toggle="collapse" data-target=".subnavbar"><span
-                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span> </a><a class="brand" href="index.html"><img src="img/round.png">ReferralShip </a><div class="loader hidden"></div>
+                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span> </a><a class="brand" href="index.html"><img src="img/round.png">ReferralShip </a>
       <div class="nav-collapse">
         <ul class="nav pull-right">
           <li class="dropdown"><a href="#" class="dropdown-toggle brand" data-toggle="dropdown" id="nav-username"><span id="first"></span>&nbsp;&nbsp;&nbsp;<span id="second"></span></a>
@@ -95,12 +95,14 @@
             text-align: right;
             "> 
                 © 2017 ReferralShip&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="#" target="_blank">
+                <a href="http://facebook.com/ReferralShip" target="_blank">
                     <i class="icon-facebook-sign"></i>
                 </a>
+<!--
                 <a href="#" target="_blank">
                     <i class="icon-linkedin-sign"></i>
                 </a>
+-->
             </div>
         </div>
       <!-- /row --> 
