--- a/platform/offer-page.html
+++ b/platform/offer-page.html
@@ -16,6 +16,7 @@
                   <textarea class="form-control span6 hide" rows="5" id="comment" placeholder="Your message..."></textarea>
                 </div>
                 <div class="form-group span12">
+                    <p style="margin-top:10px; margin-bottom:0;"><b>Note:</b> if you uploaded a resume in your account details, it is already added in the message as a link</p>
                     <button type="button" class="btn btn-warning send-message">Send message</button>
                 </div>
             </div>
@@ -229,13 +230,23 @@
                     }
                 }
                 )
+                var messageResume = "";
+                ajaxGetCall("https://api.backand.com/1/query/data/getFIlesByOkey?parameters=%7B%22okey%22:%22"+oKey+"%22%7D",
+                function(error){},
+                function(data){
+                    if(data.length > 0){
+                        messageResume = "<p>Link to my resume:</p><a href='https://files.backand.io/referralship/"+data[0].url+"' target='_blank'>https://files.backand.io/referralship/"+data[0].url+"</a>";
+                    }
+                });
+                
                 $(".send-message").on("click", function(){
-                    var email = "<div style='max-width:600px'><table border='0' cellpadding='0' cellspacing='0' class='body' style='width:100%'><tr style='font-family:sans-serif'><td style='font-size:14px'></td><td class='container' style='font-size:14px'><div class='content'><span class='preheader' style='display:none'></span><table class='main' style='width:100%'><tbody style='background:#fff'><tr style='background-color: #ec9400'><td> <p style='text-align:center'><span style='font-size:30px'><span style='color: white'>ReferralShip</span></span></p></td></tr><tr><td class='wrapper' style='padding:20px'><table border='0' cellpadding='0' cellspacing='0' style='width:100%'><tr><td style='font-size:14px'><p>"+tinymce.activeEditor.getContent()+"</p></td></tr></table></td></tr></tbody></table> <div style='height:10px'> </div><div class='footer' style='text-align:center'><table border='0' cellpadding='0' cellspacing='0' style='width:100%'><tr style=''><td class='content-block' style='color:#999999'><span class='apple-link' style='text-align:center'><a href='http://referralship.net' style='color:#999'>Login to your account</a></span><br></td></tr><tr><td class='content-block powered-by' style='font-size:14px'>Powered by <span style='color:#999999'>Referralship</span>.</td></tr></table></div></div></td><td style='font-size:14px'></td></tr></table></div>";
+                    var email = "<div style='max-width:600px'><table border='0' cellpadding='0' cellspacing='0' class='body' style='width:100%'><tr style='font-family:sans-serif'><td style='font-size:14px'></td><td class='container' style='font-size:14px'><div class='content'><span class='preheader' style='display:none'></span><table class='main' style='width:100%'><tbody style='background:#fff'><tr style='background-color: #ec9400'><td> <p style='text-align:center'><span style='font-size:30px'><span style='color: white'>ReferralShip</span></span></p></td></tr><tr><td class='wrapper' style='padding:20px'><table border='0' cellpadding='0' cellspacing='0' style='width:100%'><tr><td style='font-size:14px'><p>"+tinymce.activeEditor.getContent()+"</p><p>"+messageResume+"</p></td></tr></table></td></tr></tbody></table> <div style='height:10px'> </div><div class='footer' style='text-align:center'><table border='0' cellpadding='0' cellspacing='0' style='width:100%'><tr style=''><td class='content-block' style='color:#999999'><span class='apple-link' style='text-align:center'><a href='http://referralship.net' style='color:#999'>Login to your account</a></span><br></td></tr><tr><td class='content-block powered-by' style='font-size:14px'>Powered by <span style='color:#999999'>Referralship</span>.</td></tr></table></div></div></td><td style='font-size:14px'></td></tr></table></div>";
                     email = email.replace(/&nbsp;/g, "");
                     var mailData = JSON.stringify({
                       "to": myRecord[0].author,
                       "message": email
                     });
+                    
                     $.ajax({
                         url: 'https://api.backand.com/1/objects/action/ReferOffer/'+parseInt(params)+'?name=SendEmailMandrill',
                         async: false,
@@ -256,7 +267,7 @@
                               allowOutsideClick: true,
                               allowEscapeKey: true
                             });
-                            setTimeout(function() {window.location.reload();}, 3000);
+                            //setTimeout(function() {window.location.reload();}, 3000);
                         }
                     });
                 });
